feat: implement SaaS multi-tenant architecture
- Add tenant isolation with Hibernate @Filter and TenantContext
- Add agent module with WebSocket client and ADB command executor
- Add S3ObjectStorageService and LocalFilesystemStorageService
- Add TierEnforcer with FREE/PRO/ENTERPRISE limits
- Add UserManagementService with invitations and RBAC
- Add AgentConnectionManager and WebSocket handler
- Add AuditLogService (ENTERPRISE-only)
- Add MigrationService for standalone-to-cloud import
- Add LogcatStreamingController for real-time device streaming
- Add Dockerfile and application-saas.properties
- Add docker-compose.dev.yml for local PostgreSQL + MinIO
- Update LogCollectionService for dual storage (local + MinIO)
- Add Default project fallback for immediate MinIO uploads
- Fix log rename duplication bug